--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.12.4",
+    "connect-flash": "^0.1.1",
+    "express": "^4.12.4",
     "hbs": "^3.0.1",
-    "express": "^4.12.4"
+    "mongoose": "^4.0.4",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "password-hash": "^1.2.2"
   },
   "devDependencies": {},
   "scripts": {
